[package]
name = "macroquad_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ord_subset = "3.1.1"
slotmap = { version = "1.0.6", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
rand = "0.8.5"

egui-macroquad = "0.15.0"
macroquad = "0.3.26"

